House type(subdocument for house) handle functions add/update/delete collection - done

--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -23,12 +23,13 @@
             let longitude = document.getElementById('longitude').innerText
             var test = { lat: parseInt(latitude), lng: parseInt(longitude) };
             var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
+                zoom: 10,
                 center: test
             });
             var marker = new google.maps.Marker({
                 position: test,
-                map: map
+                map: map,
+                mapTypeId: google.maps.MapTypeId.HYBRID
             });
         }
     </script>
