Added house list template

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
         <title> {{title}} </title>
     </head>
 
-    <body> 
+    <body class="body"> 
         <main>
             <!-- 
                 I'm thinking we put different page types in the body using handlebars
