--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -41,7 +41,7 @@
     </script>
     <div id="latitude" hidden=true>{{latitude}}</div>
     <div id="longitude" hidden=true>{{longitude}}</div>
-    <script defer
+    <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5Y2OeJZ_gqoeUxehJ6BaKdONCF0g1JRU&callback=initMap">
         </script>
 
