--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> {{title}} </title>
-    </head>
 
-    <body class="body"> 
-        <main>
-            <!-- 
-                I'm thinking we put different page types in the body using handlebars
-                Like we could have the main page, individual house page, etc.
-            -->
-            {{{body}}}
-        </main>
-    </body> 
+<head>
+    <meta charset="utf-8">
+    <title> {{title}} </title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+</head>
+
+<body class="body">
+    <main>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">House Finder</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown" class="active">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">User <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Add</a></li>
+                            <li><a href="#">Manage</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Home <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Add</a></li>
+                            <li><a href="#">Search</a></li>
+                            <li><a href="#">Manage</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">System Management</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        {{{body}}}
+    </main>
+</body>
+
 </html>
