--- a/views/pages/houseList.handlebars
+++ b/views/pages/houseList.handlebars
@@ -16,9 +16,38 @@
         We will change this to houses that match the user criteria only of course
       -->
 
+    <style>
+        .cover-container {
+            height: 200px;
+            width: 100%;
+            white-space: nowrap;
+            overflow-x: scroll;
+            overflow-y: hidden;
+        }
+
+        .cover-item {
+            position: relative;
+            display: inline-block;
+            margin: 8px 8px;
+            box-shadow: 2px 2px 4px #bbb;
+            border-top-right-radius: 4px;
+            width: 116px;
+            height: 158px;
+            vertical-align: bottom;
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+
     <div class="houseList">
         {{#each list}}
-        <img id="image" src={{this.profilePicture}} alt="House Image" style="width:80%;height:400px;">
+        <div class="cover-container">
+            {{#each this.profilePicture}}
+            <img class="cover-item" src="{{this}}" alt="house" style="width:40%">
+            {{/each}}
+        </div>
+
         <a href="house/{{this._id}}">More Details</a>
         <p id="houseDescription"> {{this.description}} </p>
         {{/each}}
