--- a/views/pages/registration.handlebars
+++ b/views/pages/registration.handlebars
@@ -38,13 +38,13 @@
                     <div id="LastNameError">You must enter your Last Name</div>
                     <div id="EmailError">You must enter an email address</div>
                     <div id="passwordError">You must enter a password</div>
-<!--                    <div id="profilepicError">You must enter a profile picture</div>-->
-<!--                    <div id="streetError">You must enter a street</div>-->
-<!--                    <div id="housenumberError">You must enter a house number</div>-->
-<!--                    <div id="cityError">You must enter a city</div>-->
-<!--                    <div id="stateError">You must enter a state</div>-->
-<!--                    <div id="pincodeError">You must enter a pincode</div>-->
-<!--                    <div id="ageError">You must enter a age</div>-->
+                    <div id="pictureError">You must enter a profile picture</div>
+                    <div id="streetError">You must enter a street</div>
+                    <!--                    <div id="housenumberError">You must enter a house number</div>-->
+                    <!--                    <div id="cityError">You must enter a city</div>-->
+                    <!--                    <div id="stateError">You must enter a state</div>-->
+                    <!--                    <div id="pincodeError">You must enter a pincode</div>-->
+                    <!--                    <div id="ageError">You must enter a age</div>-->
                 </div>
             </div>
         </div>
@@ -69,6 +69,7 @@
                                placeholder="Last Name">
                     </div>
                 </div>
+
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="email">Email</label>
@@ -81,48 +82,48 @@
                     </div>
                 </div>
 
-<!--                <div class="form-row">-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="street">street</label>-->
-<!--                        <input type="text" maxlength="50" name="email" class="form-control" id="street" placeholder="street">-->
-<!--                    </div>-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="profilepicture">profilepicture</label>-->
-<!--                        <input type="text" maxlength="50" name="password" class="form-control" id="profilepicture"-->
-<!--                               placeholder="profilepicture">-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="street">street</label>
+                        <input type="text" maxlength="50" name="street" class="form-control" id="street" placeholder="street">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="profilepicture">profilepicture</label>
+                        <input type="text" maxlength="50" name="profilepicture" class="form-control" id="profilepicture"
+                               placeholder="profilepicture">
+                    </div>
+                </div>
 
-<!--                <div class="form-row">-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="housenumber">housenumber</label>-->
-<!--                        <input type="text" maxlength="50" name="email" class="form-control" id="housenumber" placeholder="housenumber">-->
-<!--                    </div>-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="city">city</label>-->
-<!--                        <input type="text" maxlength="50" name="password" class="form-control" id="city"-->
-<!--                               placeholder="city">-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="house_number">house_number</label>
+                        <input type="text" maxlength="50" name="house_number" class="form-control" id="house_number" placeholder="housenumber">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="city">city</label>
+                        <input type="text" maxlength="50" name="city" class="form-control" id="city"
+                               placeholder="city">
+                    </div>
+                </div>
 
-<!--                <div class="form-row">-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="state">state</label>-->
-<!--                        <input type="text" maxlength="50" name="email" class="form-control" id="state" placeholder="state">-->
-<!--                    </div>-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="pincode">pincode</label>-->
-<!--                        <input type="text" maxlength="50" name="password" class="form-control" id="pincode"-->
-<!--                               placeholder="pincode">-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="state">state</label>
+                        <input type="text" maxlength="50" name="state" class="form-control" id="state" placeholder="state">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="pincode">pincode</label>
+                        <input type="text" maxlength="50" name="pincode" class="form-control" id="pincode"
+                               placeholder="pincode">
+                    </div>
+                </div>
 
-<!--                <div class="form-row">-->
-<!--                    <div class="form-group col-md-6">-->
-<!--                        <label for="age">age</label>-->
-<!--                        <input type="text" maxlength="50" name="email" class="form-control" id="age" placeholder="age">-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="age">age</label>
+                        <input type="text" maxlength="50" name="age" class="form-control" id="age" placeholder="age">
+                    </div>
+                </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary">Register</button>
                 </div>
