--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,8 +66,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="public/js/login.js"></script>
-    <script src="public/js/registerForm.js"></script>
+    <script src="../../public/js/login.js"></script>
+    <script src="../../public/js/registerForm.js"></script>
 </body>
 
 </html>
