add needed files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,6 +62,9 @@
         crossorigin="anonymous"></script>
     <script src="public/js/login.js"></script>
     <script src="public/js/registerForm.js"></script>
+    <script type="text/javascript" src="/public/js/favouriteHouse.js"></script>
+    <script type="text/javascript" src="/public/js/house.js"></script>
+
 </body>
 
 </html>
