--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -42,7 +42,7 @@
         <p id="houseDescription"> {{description}} </p>
         <p id="houseMisc"> {{amenities}} <br> Pet Friendly: {{pet}} <br> Parking Available: {{park}}</p>
     </div>
-    <button id="favButton" value="{{houseId}}"> Add Favourite</button>
+    <button id="favButton" value="{{houseId}}" class="fav"> Add Favourite</button>
     <br>
     <br>
 
