--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -46,4 +46,12 @@
     <br>
     <br>
 
+    <button id="commentButton" class="comment"> Add Comment</button>
+    <br>
+    <br>
+    <span id="commentLabel">&nbsp;</span>
+    <textarea id="commentTextarea" rows="4" cols="50" value="" hidden=true></textarea>
+    <button id="commentDoneButton" class="commentDone" hidden=true> Done</button>
+
+
 </div>
