--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -72,6 +72,7 @@
     <script src="public/js/registerForm.js"></script>
     <script type="text/javascript" src="/public/js/favouriteHouse.js"></script>
     <script type="text/javascript" src="/public/js/house.js"></script>
+    <script type="text/javascript" src="/public/js/comment.js"></script>
 
 </body>
 
