Updated function: The default state of the 'Favourite Button' will change depending on different login users

--- a/views/pages/comments.handlebars
+++ b/views/pages/comments.handlebars
@@ -38,3 +38,5 @@
     <button id="commentDoneButton" class="commentDone" hidden=true>Done</button>
 
 </div>
+
+ <script type="text/javascript" src="/public/js/comment.js"></script>
