Fav house display and remove from userlist handling done

--- a/views/pages/houseList.handlebars
+++ b/views/pages/houseList.handlebars
@@ -48,8 +48,9 @@
             {{/each}}
         </div>
 
-        <a href="house/{{this._id}}">More Details</a>
+        <a href="http://localhost:3000/house/{{this._id}}">More Details</a>
         <p id="houseDescription"> {{this.description}} </p>
         {{/each}}
     </div>
+
 </div>
