--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,21 +26,28 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="dropdown" class="active">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">User <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">User <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Add</a></li>
-                            <li><a href="#">Manage</a></li>
+                            <li><a href="/users">Add</a></li>
+                            <li><a href="/users">Manage</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Home <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Home <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Add</a></li>
-                            <li><a href="#">Search</a></li>
-                            <li><a href="#">Manage</a></li>
+                            <li><a href="/house/">Add</a></li>
+                            <li><a href="/house/">Search</a></li>
+                            <li><a href="/house/">Manage</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">System Management</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">System Management <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/account">Account</a></li>
+                        </ul>
+
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {{#if hasLogin}}
