--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/public/css/style.css" />
+    
+    <!-- Regular CSS -->
+    <link rel="stylesheet" href="/public/css/style.css" /> 
+    <link rel="stylesheet" href="/public/css/houseForm.css"> <!-- For the form on the main page -->
+    <link rel="stylesheet" href="/public/css/houseList.css"> <!-- The grid that shows a list of houses -->
+    <link rel="stylesheet" href="/public/css/housePage.css"> <!-- The individual house page that shows all the house information -->
 
 </head>
 
