--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -83,7 +83,7 @@
              {{/each}}
          </div>
 
-         <a href="{{this._id}}"> More Details</a>
+         <a href="http://localhost:3000/house/{{this._id}}"> More Details</a>
          <p id="houseDescription"> {{this.description}} </p>
          {{/each}}
      </div>
