Add new house : done

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">Home <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/house/">Add</a></li>
+                            <li><a href="/house/add">Add</a></li>
                             <li><a href="/house/">Search</a></li>
                             <li><a href="/house/">Manage</a></li>
                         </ul>
@@ -80,6 +80,7 @@
     <script type="text/javascript" src="/public/js/favouriteHouse.js"></script>
     <script type="text/javascript" src="/public/js/house.js"></script>
     <script type="text/javascript" src="/public/js/comment.js"></script>
+    <script type="text/javascript" src="/public/js/manageHouse.js"></script>
 
 </body>
 
