Add new house : color change of label

--- a/views/pages/houseManage.handlebars
+++ b/views/pages/houseManage.handlebars
@@ -96,7 +96,7 @@
     <div class="form-row">
         <h3> House Images</h3>
         <div>
-            <label for="image_uploads">Choose images to upload (PNG, JPG)</label>
+            <label for="image_uploads" style="color: blue;">Choose images to upload (PNG, JPG)</label>
             <input type="file" id="image_uploads" name="image_uploads" accept=".jpg, .jpeg, .png" multiple>
         </div>
         <div class="preview">
